# PY_Web_07

./: .project  Dockerfile  Groups.csv  Lectors.csv  README.md  Students.csv  alembic.ini  database_HW7.db  db.py  docker-compose.yml  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 60c4e0a2eb9f_initial_migration.py  8a08bc238217_initial_migration.py
