[tool.poetry]
name = "project_sqlalchemy"
version = "0.1.0"
description = "Project description"
authors = ["Ostrenko Dmytro"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

